--- a/style/estilos.css
+++ b/style/estilos.css
@@ -169,11 +169,20 @@ img {
 }
 
 .skill.s-uno {
-    animation: showUp 2.5s ease-in-out;
+    animation: showUp 3s ease-in-out;
 }
 
 .skill.s-dos {
-    animation: showUp 3.5s ease-in-out;
+    animation: showUp 4s ease-in-out;
+}
+
+@media (min-width: 768px) {
+    .skill.s-uno {
+        animation: showUp 4.5s ease-in-out;
+    }
+    .skill.s-dos {
+        animation: showUp 5.5s ease-in-out;
+    }
 }
 
 .skill h2 {
@@ -188,11 +197,15 @@ img {
 
 /******FOOTER*****/
 
+.footer {
+    margin-top: 30px;
+}
+
 .footer h3 {
     color: #ffffff;
-    text-align: right;
-    padding-right: 20px;
+    text-align: center;
     font-weight: 100;
+    margin-bottom: 10px;
 }
 
 
@@ -200,10 +213,21 @@ img {
 
 .iconos {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: stretch;
     text-align: center;
     animation: moverDerecha 1s ease-in;
+}
+
+@media (min-width: 768px) {
+    .iconos {
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+    .footer h3 {
+        text-align: right;
+        padding-right: 20px;
+    }
 }
 
 .iconos a {
