--- a/style/estilos.css
+++ b/style/estilos.css
@@ -125,8 +125,16 @@ img {
 
 .boton a {
     text-decoration: none;
+    display: inline-block;
     color: #ffffff;
-    text-transform: capitalize;
+    width: 100%;
+    height: 100%;
+}
+
+.boton a span {
+width: 100%;
+height: 100%;
+text-transform: capitalize;
 }
 
 .boton:hover {
