--- a/style/estilos.css
+++ b/style/estilos.css
@@ -112,13 +112,17 @@ img {
 }
 
 .boton {
-    margin-top: 20px;
-    padding: 10px 0;
+    margin-top: 15px;
+    padding: 14px 25px;
     border-radius: 10px;
-    width: 120px;
+    cursor: pointer;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 15px;
+    font-weight: lighter;
     display: inline-block;
     border: 1px solid #ffffff;
     text-align: center;
+    background-color: transparent;
     animation: moverArriba 1s ease-in;
     transition: background-color 1s ease-in-out;
 }
@@ -127,14 +131,6 @@ img {
     text-decoration: none;
     display: inline-block;
     color: #ffffff;
-    width: 100%;
-    height: 100%;
-}
-
-.boton a span {
-width: 100%;
-height: 100%;
-text-transform: capitalize;
 }
 
 .boton:hover {
