--- a/style/estilos.css
+++ b/style/estilos.css
@@ -122,19 +122,24 @@ img {
     display: inline-block;
     border: 1px solid #ffffff;
     text-align: center;
+    color: #ffffff;
     background-color: transparent;
     animation: moverArriba 1s ease-in;
-    transition: background-color 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
 .boton a {
     text-decoration: none;
     display: inline-block;
     color: #ffffff;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: lighter;
 }
 
 .boton:hover {
     background-color: #3494cc;
+    transform: scale(1.05);
+    font-size: 16px;
 }
 
 
@@ -485,8 +490,11 @@ img {
     }
     .textos a {
         width: 100px;
+        font-size: 12px;
     }
     .textos h2 {
         font-size: 15px;
     }
+   
+    
 }
