--- a/style/estilos.css
+++ b/style/estilos.css
@@ -165,7 +165,7 @@ img {
 
 .habilidades h1 {
     color: #ffffff;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     text-align: center;
 }
 
@@ -288,7 +288,7 @@ img {
 
 .experience h2{
     margin-bottom: 15px;
-    text-align: justify;
+    text-align: center;
 }
 
 .lista-tareas {
