--- a/style/estilos.css
+++ b/style/estilos.css
@@ -25,6 +25,10 @@ nav a {
     color: #ffffff;
 }
 
+ul li{
+    list-style: none;
+}
+
 .icono {
     display: block;
     /*Aplico animacion Keyframe*/
@@ -350,18 +354,37 @@ img {
     
 }
 
+.web li{
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.795);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.795);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.795);
+    transition: all 0.2s ease-in-out;
+    padding-bottom: 1.5rem;
+    background-color: #0f0c2981;
+    animation: showUp 4s ease-in-out;
+}
+
+.web li:hover{
+    -webkit-box-shadow: 0px 0px 10px 0px rgb(52, 148, 204);
+    -moz-box-shadow: 0px 0px 10px 0px rgb(72, 188, 255);
+    box-shadow: 0px 0px 10px 0px rgb(72, 188, 255);
+    transform: scale(1.1);
+}
+
 .web li a img{
     max-width: 100%;
     height: 100%;
     display: block;
-    border: 1px solid #06c5ff;
-    border-radius: 1rem;
+    border-radius: 5px 5px 0 0;
 }
 
 @media (min-width: 768px) {
     .web{
         flex-direction: row;
         justify-content: space-between;
+        margin-bottom: 5rem;
     }
     .web li{
         flex-basis: 0 1 calc(30% - 1rem);
@@ -370,8 +393,8 @@ img {
     }
 
     .web li a img{
-        max-width: 100%;
-        height: 90%;
+        width: 100%;
+        height: 80%;
     }
     
 }
@@ -380,7 +403,7 @@ img {
 
 
 
-.lista-tareas a {
+/* .lista-tareas a {
     text-decoration: none;
     font-size: 1em;
     color: #06c5ff;
@@ -392,11 +415,11 @@ img {
     font-size: 1.1em;
 }
 
-.lista-tareas ul,li {
+.lista-tareas ul li {
     text-align: center;
     list-style: none;
     line-height: 1.5rem;
-}
+} */
 
 
 
